cmake_minimum_required(VERSION 3.1)

project(Workshop)

add_subdirectory("01-Setup")
add_subdirectory("02-Movement")
add_subdirectory("03-Structure")
add_subdirectory("04-Sprite-Texture")
add_subdirectory("05-Map")
add_subdirectory("06-Entity")
add_subdirectory("07-Audio")
add_subdirectory("08-Text")